<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:touchscreenBlocksFocus="false">

    <ImageView
        android:id="@+id/MainMenuImage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/mainmenu"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="125dp"
        android:fontFamily="monospace"
        android:gravity="center|top"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#DA1414"
        android:textSize="50sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignBottom="@+id/MainMenuImage"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="35dp">

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:onClick="showPlayScreen"
            android:text="@string/play" />

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:onClick="showScoreScreen"
            android:text="@string/highestScores" />

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:onClick="showHelpScreen"
            android:text="@string/help"/>

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:text="@string/settings"
            android:onClick="showSettingsScreen" />

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:text="@string/logout"
            android:onClick="signOut" />

    </LinearLayout>

</RelativeLayout>
